force-app/main/default/objects/Log_API_Data__c/Log_API_Data__c.object-meta.xml
<CustomObject>
    <label>API Call Log</label>
    <nameField>
        <label>Type</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>API Call Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>