force-app/main/default/objects/Log_API_Data__c/fields/Log__c.field-meta.xml
<CustomField>
    <fullName>Log__c</fullName>
    <label>Log</label>
    <length>2002</length>
    <type>LongTextArea</type>
</CustomField>